Fixing layout shift while loading model

--- a/src/components/views/PolicyModel/LoadingState/LoadingState.module.scss
+++ b/src/components/views/PolicyModel/LoadingState/LoadingState.module.scss
@@ -11,7 +11,7 @@
   padding-top: 0;
   padding-bottom: 1;
   margin-top: 1rem;
-  color: #409385;
+  // color: #409385;
 
   header {
     position: relative;
@@ -35,16 +35,17 @@
     .stateHeader {
       // border-top: 4px solid #16467a;
       width: 100%;
-      height: 12rem;
-      padding-left: 50px;
+      height: 6rem;
+      padding-left: 30px;
       display: grid;
       h1 {
         font-size: 32px;
         color: #409385;
       }
 
-      grid-template-columns: auto 12rem 8rem min-content 15rem min-content 14rem;
-      grid-template-rows: 1fr 1fr;
+      // grid-template-columns: auto 12rem 8rem min-content 15rem min-content 14rem;
+      grid-template-columns: 1fr;
+      grid-template-rows: 1fr;
 
       > div {
         display: flex;
@@ -57,21 +58,28 @@
         padding-left: 0;
       }
 
-      > div:nth-of-type(2),
-      > div:nth-of-type(3),
-      > div:nth-of-type(4),
-      > div:nth-of-type(5),
-      > div:nth-of-type(6),
-      > div:nth-of-type(7) {
-        // border-bottom: 2px solid #16467a;
-      }
+      // > div:nth-of-type(2),
+      // > div:nth-of-type(3),
+      // > div:nth-of-type(4),
+      // > div:nth-of-type(5),
+      // > div:nth-of-type(6),
+      // > div:nth-of-type(7) {
+      //   // border-bottom: 2px solid #16467a;
+      // }
 
       .stateName {
         grid-row-start: 1;
-        grid-row-end: 3;
+        grid-row-end: 4;
+        width: 100%;
         font-size: 2.2rem;
         font-weight: 800;
         justify-content: flex-start;
+        margin-top: 5px;
+
+        font-family: Rawline;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 26px;
       }
 
       .explanation {
